# codex-dojo

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  utils.py
.codex/: rules.md
src/: server.py
src/auth/: __init__.py  dependencies.py  jwt_handler.py
src/models/: item.py  user.py
src/routes/: __init__.py  auth.py  items.py  root.py
src/services/: item_service.py
tests/: conftest.py  test_app.py
